CrystalBallSolution/CrystalBallWebSite/Content/Site.css
/* --------------------------------Message User Control-------------------------------- */


.red-panel {
    background-color: rgba(255,0,0,.3);
    border: 1px solid #ff0000;
    margin: 15px;
    padding: 5px;
}

.yellow-panel {
    background-color: rgba(255,188,0,.3);
    border: 1px solid #ffbc00;
    margin: 15px;
    padding: 5px;
}


.blue-panel {
    background-color: rgba(41,128,185,.3);
    border: 1px solid #2980b9;
    margin: 15px;
    padding: 5px;
    background-image: url("../images/background-road.jpg");
    background-repeat: no-repeat;
    background-position: center left;
    padding-left: 150px;
   
}


/*---------------------GENERAL STYLING ------------------------*/

.col-1,
.col-2,
.col-3,
.col-4,
.col-5,
.col-6,
.col-7,
.col-8,
.col-9,
.col-10,
.col-11,
.col-12 {
    display: block;
    float: left;
    margin: 1.04%;
    min-height: 1px;
    box-sizing: border-box;
}

.col-1 {
   width: 6.25%;
   min-width: 37px
}

.col-2 {
   width: 14.58%;
   min-width: 87px
}

.col-3 {
   width: 22.92%;
   min-width: 137px
}

.col-4 {
   width: 31.25%;
   min-width: 187px
}

.col-5 {
   width: 39.58%;
   min-width: 237px
}

.col-6 {
   width: 47.92%;
   min-width: 287px
}

.col-7 {
   width: 56.25%;
   min-width: 337px
}

.col-8 {
   width: 64.58%;
   min-width: 387px
}

.col-9 {
   width: 72.92%;
   min-width: 437px
}

.col-10 {
   width: 81.25%;
   min-width: 487px
}

.col-11 {
   width: 89.48%;
   min-width: 537px
}

.col-12{
   width: 97.92%;
   min-width: 587px
}


body {
  margin: 0 auto;
  background-image: url("../images/background-road.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  font-family: Helvetica, Arial, sans-serif;
  height: 100%;
  line-height: 1.2em;
}



h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: 'Coda', Helvetica, Arial, sans-serif;
  font-weight: 500;
  line-height: 1.1;
  margin: .5em 0;
}

h1, h2, h3, h4 {
    text-align: center;
}

.center {
    text-align: center;
}



/* Set widths on the form inputs since otherwise they're 100% wide */
input,
select {
    /*max-width: 280px;*/
    height: 26px;
}


input[type="checkbox"] {
    vertical-align: middle;
    margin-right: 5px;
}

textarea, .textarea {
    height: 100px;
    resize: vertical;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .jumbotron {
        margin-top: 20px;
    }
    .body-content {
        padding: 0;
    }
}

  a {
      text-decoration: none;
      color: #003D7E;
      
  }

  a:hover {
      color: #1363a8;
  }

/* ------------------------------------- BUTTONS --------------------------------- */



.next {
    float: right;
}

.next:hover:after {
    width: 100%;
}


.submit {
    margin: 0 auto;
}


.submit:after {
    margin: 0 auto;
}


.back {
    float: left;
}


.back:after {
    margin-left: 100%;
}


.back:hover:after {
      margin-left: 0;
}


.button {
    display: block;
    height: 40px;
    width: 100px;
    background-color: #ffffff;
    line-height: 40px;
    font-size: 1.2em;
    text-align: center;
    color: #003D7E;
    box-shadow: 5px 5px 5px rgba(0,0,0,.2);
    margin-top: 5px;
    margin-bottom: 5px;    
}

.button2 {
    display: inline-block;
    height: 40px;
    width: 100px;
    background-color: #ffffff;
    line-height: 40px;
    font-size: 1.2em;
    text-align: center;
    color: #003D7E;
    box-shadow: 5px 5px 5px rgba(0,0,0,.2);
    margin-top: 5px;
    margin-bottom: 5px;    
}

.button::after, .button2::after {
    content: '';
    display: block;
    height: 4px;
    width: 0;
    background-color: transparent;
    transition: .3s linear;
}

.button:hover, .button2:hover{
    background-color: #ebf3f9;
}

.button:hover:after, .button2:hover:after{
    background-color: #1363a8;
    width: 100%;
}


.button-long {
    width: 220px;
}



.listview-buttons  {
    width: 60px;
    height: 25px;
    border: 1px solid #bbbbbb;
    padding: 3px 8px;
    background: linear-gradient(#ffffff, #cccccc);
}

.listview-buttons:hover {
    background: linear-gradient(#e8f3fc, #BED4E6)
}

.listview-buttons:active  {
    background: linear-gradient(#0C487A, #3379B5 ) ;
    color: #ebf3f9;
}

.admin_button{
  background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 9;
  -moz-border-radius: 9;
  border-radius: 9px;
  color: #ffffff;
  font-size: 1em;
  padding: 3px 8px 3px 8px;
  
}

.admin_button:hover
{
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);

}

.admin_button2 {
	-moz-box-shadow: 0 10px 14px -7px #276873;
	-webkit-box-shadow: 0 10px 14px -7px #276873;
	box-shadow: 0 10px 14px -7px #276873;

	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
    background-color:#599bb3;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
    color:#ffffff;
    padding:3px 6px;
}
/* ... */

